--- a/calculator.html
+++ b/calculator.html
@@ -7,7 +7,7 @@
         <script src="calc.js"></script>
         <title>Calculator</title>
     </head>
-    <body>
+    <body class="body">
         <div class="container">
             <div class="calculator">
                 <table class="calc">
